--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -355,8 +355,12 @@ div#confirm img {
 }
 
 div#tags label{
-    height:20px;
+    height:40px;
     width:60px;
+}
+
+fieldset#tags {
+    height:45px;
 }
 
 #myTable, #invites, #login, #logout {
@@ -364,9 +368,10 @@ div#tags label{
 }
 
 #userTop {
-    height:20px;
+    height:30px;
     font-size: 13px;
     font-family: PT Sans, sans-serif;
+    text-shadow: none;
 }
 
 .ui-bar-a {
