--- a/css/myTables.css
+++ b/css/myTables.css
@@ -23,10 +23,10 @@
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 2%;
-    font-size: 17px;
+    font-size: 15px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans Narrow;
+    font-family: PT Sans;
     
 }
 
@@ -160,6 +160,7 @@ div#pendingimg {
 
 .ui-listview>.ui-li-has-icon>.ui-btn, .ui-listview>.ui-li-static.ui-li-has-icon {
     padding-left: 20px;
+    border: none;
 }
 
 .ui-icon-mycheck:after {
@@ -189,7 +190,7 @@ text-transform: uppercase;
 }
 
 .text {
-font-size: 17px;
+font-size: 20px;
 height: 140px;
 font-family: PT Sans;
 background-color: #eee;
@@ -207,6 +208,12 @@ width: 96px;
 
 div.ui-bar.ui-bar-a.text {
     background-color: #eee;
+    font-size: 20px;
+}
+
+.ui-content .ui-listview-inset, .ui-panel-inner, .ui-listview-inset {
+    padding-top:10px;
+   
 }
 
 /* End of CSS document */
