--- a/css/moodipad.css
+++ b/css/moodipad.css
@@ -4,7 +4,8 @@
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 2%;
-    font-size: 30px;
+    margin-top: 2%;
+    font-size: 34px;
     overflow: visible !important;
     white-space: normal !important;
    font-family: PT Sans, sans-serif;
@@ -131,9 +132,16 @@
 }
 
 a.activitiesImages.ui-btn {
-	padding: 80px;
+	padding: 70px;
 }
 
 input#address {
     font-size: 28px;
+}
+
+a#closerightPanel {
+ margin-right:35px;
+ margin-top:45px;
+ height:30px;
+ width:30px;
 }
