--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -370,7 +370,7 @@ fieldset#tags {
    
 }
 
-#myTable, #invites, #login, #logout {
+#myTable, #invites, #login, #logout, #home {
     background-color: #fff;
 }
 
