--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -4,7 +4,8 @@
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 2%;
-    font-size: 25px;
+    margin-top: 2%;
+    font-size: 34px;
     overflow: visible !important;
     white-space: normal !important;
     font-family: PT Sans Narrow;
