--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -22,7 +22,8 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.5%;
+    margin-bottom: 1%;
+    margin-top: 1%;
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
@@ -193,6 +194,10 @@ addbtn img {
      text-shadow:none;
 }
 
+.text p {
+    margin-left: 4px;
+}
+
 
 .clickmore {
     font-size: 9px;
@@ -225,7 +230,7 @@ text-shadow: none;
 font-family: PT Sans;
 }
 
-#myTable, #invites, #login,#logout {
+#myTable, #invites, #login,#logout, #home {
     background-color: #fff;
 }
 
