--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -10,3 +10,13 @@
     white-space: normal !important;
     font-family: PT Sans Narrow;
 }
+
+div.ui-bar.ui-bar-a {
+    
+}
+
+div.ui-grid-b {
+    height:300px;
+    padding: 0px;
+}
+
