left panel img sizing

--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -309,6 +309,10 @@ h4#bioText {
     margin-left: 10px;
 }
 
+img#LeftPanelProfileImage {
+    height:200px;
+    width:200px;
+}
 
 
 /* End of CSS document */
