--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -245,4 +245,9 @@ font-family: PT Sans;
     border: none;
    
 }
+
+img#LeftPanelProfileImage {
+    height:200px;
+    width:200px;
+}
 /* End of CSS document */
