--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -396,6 +396,10 @@ a#InvitesSentId.confirminvitesButton.ui-link {
     
 }
 
+img#LeftPanelProfileImage {
+    height:200px;
+    width:200px;
+}
 
 
 /* End of CSS document */
