--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -38,7 +38,7 @@ background-color: #eee;
 text-shadow: none;
 }
 
-p {
+.ui-bar.ui-bar-a text p {
     font-size: 30px;
 }
 
@@ -51,6 +51,7 @@ p {
 }
 
 .ui-bar.ui-bar-a text {
+    
     height:300px;
    
 }
@@ -60,7 +61,7 @@ p {
 }
 
 a.ui-link.ui-btn.ui-shadow.ui-corner-all {
-    font-size: 15px;
+    font-size: 20px;
     background-color: #eee;
     border: none;
 }
