--- a/css/pendingInvitationsipad.css
+++ b/css/pendingInvitationsipad.css
@@ -61,11 +61,13 @@
 
 .namebar {
 	font-size: 24px;
+        line-height: 38px;
 
 }
 
 .infobar {
 	font-size: 28px;
+        font-size: 42px;
 }
 
 .float-left {
