--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -135,7 +135,17 @@ h4 {
     -webkit-box-shadow: none;
 }
 
-
+.ui-icon-mytables:after {
+	background-image: url("../images/tables.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 .ui-listview .ui-li-static {
     padding: 0em;
@@ -302,6 +312,7 @@ fieldset.ui-grid-b {
 
 #myTable, #invites, #login, #logout,#home {
     background-color: #fff;
+    font-family: PT Sans;
 }
 
 h4#bioText {
