--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -132,6 +132,18 @@ h4 {
     border-style: hidden;
     -webkit-box-shadow: none;
 }
+.ui-icon-mytables:after {
+	background-image: url("../images/tables.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
+
 
 /* style for the action buttons */
 
@@ -322,6 +334,7 @@ h4 {
 }
 #myTable, #invites, #login, #logout {
     background-color: #fff;
+    font-family: PT Sans;
 }
 
 a.activitiesImages.ui-btn {
