--- a/css/myTables.css
+++ b/css/myTables.css
@@ -135,6 +135,18 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-mytables:after {
+	background-image: url("../images/tables.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
+
 
 div#pendingimg {
 	width:96px;
@@ -225,6 +237,7 @@ div.ui-bar.ui-bar-a.text {
 
 #myTable, #invites, #login,#logout, #home {
     background-color: #fff;
+    font-family: PT Sans;
 }
 
 img#LeftPanelProfileImage {
