--- a/css/login.css
+++ b/css/login.css
@@ -135,6 +135,17 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-mytables:after {
+	background-image: url("../images/tables.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 /* style for the action buttons */
 
@@ -292,6 +303,7 @@ height: 50px;
 
 #myTable, #invites, #login,#logout, #home {
     background-color: #fff;
+    font-family: PT Sans;
 }
 
 a#closeleftPanel {
