--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -134,6 +134,17 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-mytables:after {
+	background-image: url("../images/tables.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 div#pendingimg {
 	width:96px;
@@ -238,6 +249,7 @@ font-family: PT Sans;
 
 #myTable, #invites, #login,#logout, #home {
     background-color: #fff;
+    font-family: PT Sans;
 }
 
 .addimg, .rejectimg {
