fix for mood page tags ipad sizing

--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -350,4 +350,12 @@ img#LeftPanelProfileImage {
     height:200px;
     width:200px;
 }
+
+.ui-btn, label.ui-btn {
+    font-weight: 400;
+}
+
+.topicsList {
+    font-size: 20px;
+}
 /* End of CSS document */
