--- a/css/findYourPeopleipad.css
+++ b/css/findYourPeopleipad.css
@@ -102,3 +102,13 @@ p#location.preferredLocation {
 fieldset.ui-grid-b {
     height:200px;
 }
+
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
