--- a/css/loginipad.css
+++ b/css/loginipad.css
@@ -135,3 +135,13 @@ input {
     font-size: 28px;
 }
 
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
+
