--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -104,3 +104,13 @@ line-height: 38px;
 font-family: PT Sans;
 text-transform: uppercase;
 }
+
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
