--- a/css/pendingInvitationsipad.css
+++ b/css/pendingInvitationsipad.css
@@ -86,3 +86,13 @@ img.addimg, img.rejectimg {
 div.ui-bar.ui-bar-a.text {
     height:300px;
 }
+
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
