--- a/css/registeripad.css
+++ b/css/registeripad.css
@@ -55,3 +55,13 @@ button#submitRegistrationButton.ui-btn.ui-shadow.ui-corner-all {
     font-family: PT Sans;
     font-size: 30px;
 }
+
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
