--- a/css/upcomingInvitationsipad.css
+++ b/css/upcomingInvitationsipad.css
@@ -171,3 +171,14 @@ label .ui-btn #tags {
 .ui-timepicker-list li {
     font-size: 22px;
 }
+
+.ui-panel {
+    width: 400px !important;
+}
+
+#myTable, #invites, #login, #logout, #home {
+    background-color: #fff;
+    font-family: PT Sans;
+    font-size: 25px;
+}
+
