varied UI fixes

--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -383,6 +383,7 @@ fieldset#tags {
 #myTable, #invites, #login, #logout, #home {
     background-color: #fff;
     font-family: PT Sans;
+    text-transform: uppercase;
 }
 
 #userTop {
