--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -314,6 +314,7 @@ fieldset.ui-grid-b {
 #myTable, #invites, #login, #logout,#home {
     background-color: #fff;
     font-family: PT Sans;
+    text-transform: uppercase;
 }
 
 h4#bioText {
