--- a/css/findYourPeopleipad.css
+++ b/css/findYourPeopleipad.css
@@ -115,6 +115,7 @@ fieldset.ui-grid-b {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
 
 .space {
