--- a/css/myTables.css
+++ b/css/myTables.css
@@ -238,6 +238,7 @@ div.ui-bar.ui-bar-a.text {
 #myTable, #invites, #login,#logout, #home {
     background-color: #fff;
     font-family: PT Sans;
+    text-transform: uppercase;
 }
 
 img#LeftPanelProfileImage {
