--- a/css/register.css
+++ b/css/register.css
@@ -254,6 +254,7 @@ font-family: PT Sans;
 #myTable, #invites, #login, #logout {
     background-color: #fff;
     font-family: PT Sans;
+    text-transform: uppercase;
 }
 
 div.uploadcare-widget-button.uploadcare-widget-button-open {
