--- a/css/moodipad.css
+++ b/css/moodipad.css
@@ -189,4 +189,5 @@ a#closeleftPanel {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
