--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -113,4 +113,5 @@ text-transform: uppercase;
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
