--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -250,7 +250,7 @@ font-family: PT Sans;
 #myTable, #invites, #login,#logout, #home {
     background-color: #fff;
     font-family: PT Sans;
-}
+    text-transform: uppercase;
 
 .addimg, .rejectimg {
     height:50px;
