--- a/css/pendingInvitationsipad.css
+++ b/css/pendingInvitationsipad.css
@@ -95,4 +95,5 @@ div.ui-bar.ui-bar-a.text {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
