--- a/css/registeripad.css
+++ b/css/registeripad.css
@@ -64,4 +64,5 @@ button#submitRegistrationButton.ui-btn.ui-shadow.ui-corner-all {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
