--- a/css/viewipad.css
+++ b/css/viewipad.css
@@ -179,4 +179,5 @@ label .ui-btn #tags {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
+    text-transform: uppercase;
 }
