--- a/css/moodipad.css
+++ b/css/moodipad.css
@@ -133,6 +133,7 @@
 
 a.activitiesImages.ui-btn {
 	padding: 70px;
+     
 }
 
 input#address {
@@ -190,4 +191,8 @@ a#closeleftPanel {
     font-family: PT Sans;
     font-size: 25px;
     text-transform: uppercase;
+}
+
+[data-role="controlgroup"] img {
+    width: 200px;
 }
