UI cleanup of right panels

--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -384,6 +384,7 @@ fieldset#tags {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
+    margin-right: 5px;
 }
 
 #userTop {
