--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -336,6 +336,7 @@ h4 {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
+    margin-right: 5px;
 }
 
 a.activitiesImages.ui-btn {
