--- a/css/upcomingInvitations.css
+++ b/css/upcomingInvitations.css
@@ -356,6 +356,9 @@ div#tags label{
 
 #myTable, #invites, #login, #logout {
     background-color: #fff;
+    text-transform: uppercase;
+    font-family: PT Sans;
+    margin-right: 5px;
 }
 
 #userTop {
