--- a/css/myTables.css
+++ b/css/myTables.css
@@ -239,6 +239,7 @@ div.ui-bar.ui-bar-a.text {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
+    margin-right: 5px;
 }
 
 img#LeftPanelProfileImage {
