--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -251,6 +251,7 @@ font-family: PT Sans;
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
+    margin-right: 5px;
 }
 
 .addimg, .rejectimg {
