fix for mood page various sizing

--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -347,6 +347,8 @@ h4 {
 a.activitiesImages.ui-btn {
 	padding: 25px;
         border-color:#fff;
+        margin-top: 0px;
+        margin-bottom: 0px;
        
 }
 
