fix for register screen new element-who are you?

--- a/css/register.css
+++ b/css/register.css
@@ -300,4 +300,7 @@ img#LeftPanelProfileImage {
     background-color: #fff;
 }
 
+.who {
+    style="font-family: PT Sans; font-size: 17px;
+}
 /* End of CSS document */
